examples/misc/error/compilation/eval_match_match.bfr
let _ =
  match nil with
  | _ :: _ :: nil -> 2
  | _ :: nil -> 1

let main = []